Added missing dependencie.

--- a/3.-Client.md
+++ b/3.-Client.md
@@ -1,6 +1,6 @@
 # Client Guide
 
-The UserBoxClient provides a User API.
+The UniBoxClient provides a User API.
 
 To get in touch with the service and to play your JavaFX game against another remote player you first have to get valid credentials from your administrator. After that you can login into the backend dashboard to change your default password.
 
