--- a/3.1-Getting-Started.md
+++ b/3.1-Getting-Started.md
@@ -1,6 +1,6 @@
 # Getting started with your JavaFX Application
 
-After you set the UniBoxClient.jar as a required dependency of your project, your are able to set it up to suit your needs.
+After you set the UniBoxClient.jar and UniBoxCore.jar as required dependencies of your project, your are able to set it up to suit your needs.
 
 First of all you have to set your username and password together with the IP address of
 the UniBoxServer instance. To be flexible, the API will provide different methods
